--- a/Shop2/Views/Product/List.cshtml
+++ b/Shop2/Views/Product/List.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<Product>
 <h1> Product List</h1>
-
 <table border="1" width="100%">
     <thead>
     <tr>
@@ -21,7 +20,7 @@
                 <td>@product.Quantity</td>
                 <td>@product.Rate</td>
                 <td>
-                    <a href="/product/details/@product.Id">Details</a>
+                    <a asp-controller="Product" asp-action="Details" asp-route-id="@product.Id">Details</a>
                 </td>
             </tr>
         }
