--- a/Shop2/Views/Product/List.cshtml
+++ b/Shop2/Views/Product/List.cshtml
@@ -20,7 +20,8 @@
                 <td>@product.Quantity</td>
                 <td>@product.Rate</td>
                 <td>
-                    <a asp-controller="Product" asp-action="Details" asp-route-id="@product.Id">Details</a>
+                    <a asp-controller="Product" asp-action="Details" asp-route-productId="@product.Id">Details</a>
+                    
                 </td>
             </tr>
         }
